# diff-2024-1-hw-1

./: .gitignore  .gitmodules  .nvim.lua  Makefile  app.c  main.c  panic.h  project.c  project.h  result.h  test_project.c
plot/: plots.py  pyproject.toml  tsne-plots.py
