[project]
name = "plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "kaleido==0.2",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.5.2",
]
